# python-tacomail

./: .gitignore  API.md  README.md  pyproject.toml
.github/workflows/: email-tests.yml  lint.yml  publish.yml  tests.yml  version-bump.yml
src/tacomail/: __init__.py  cli.py  tacomail.py
tests/: email_sender.py  test_cli.py  test_tacomail.py  test_tacomail_async.py
