[project]
name = "tacomail"
version = "0.1.0"
description = "A Python client for Tacomail"
readme = "README.md"
authors = [
    { name = "sokripon", email = "sokripon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.1",
]


[tool.pytest.ini_options]
markers = "flow"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
